# CW_4

./: READMI.md  config.py  main.py  pyproject.toml
data/: hh_vacancies.json
src/: JSONWorker.py  api.py  utils.py  vacancy.py
tests/: test_get_vacancies__.py
