[tool.poetry]
name = "cw-4"
version = "0.1.0"
description = ""
authors = ["Max Maleev <mmaleev1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
